--- a/x11/i3/config
+++ b/x11/i3/config
@@ -9,6 +9,13 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
+#                        class   border  backgr. text indicator
+client.focused           #000000 #EED49F #5B6078 #EED49F #EED49F
+#client.focused_tab_title #EED49F #EED49F #FFFFFF #EED49F #EED49F
+client.focused_inactive  #000000 #000000 #000000 #EED49F #EED49F
+client.unfocused         #EED49F #5B6078 #EED49F #5B6078 #5B6078
+client.urgent            #900000 #900000 #900000 #900000 #900000
+
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -37,11 +44,11 @@ exec --no-startup-id nm-applet
 #Start picom on boot
 exec --no-startup-id picom -b
 
-#Set main Screen
-#exec --no-startup-id xrandr --output DP-4 --primary --mode 3440x1440
+#Screen setup
+exec --no-startup-id xrandr --output DP-4 --primary --mode 3440x1440 --output HDMI-0 --left-of DP-4
 
 # Load background
-#exec --no-startup-id feh --bg-scale ~/.config/feh/wallpapers/wallpaper.png
+exec --no-startup-id feh --bg-scale ~/.config/feh/wallpapers/wallpaper.png
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -56,6 +63,9 @@ floating_modifier $mod
 # move tiling windows via drag & drop by left-clicking into the title bar,
 # or left-clicking anywhere into the window while holding the floating modifier.
 tiling_drag modifier titlebar
+
+# Start Obsidian
+bindsym $mod+Shift+o exec --no-startup-id /${HOME}/Obsidian-1.6.7.AppImage
 
 # start a terminal
 bindsym $mod+q exec kitty
@@ -197,13 +207,13 @@ bindsym $mod+r mode "resize"
 #        status_command i3status
 #}
 # Start polybar
-#exec --no-startup-id POLYBAR_MONITOR=DP-4 polybar
-#exec --no-startup-id POLYBAR_MONITOR=HDMI-0 polybar
+exec --no-startup-id POLYBAR_MONITOR=DP-4 polybar
+exec --no-startup-id POLYBAR_MONITOR=HDMI-0 polybar
 
 
 # Window gaps
 gaps inner 10
-gaps outer 10
+gaps outer 0
 
 # Optional: Set specific gaps for different modes
 # gaps inner <n>
@@ -211,6 +221,6 @@ gaps outer 10
 # smart_gaps on
 
 # Disable top title bar and set boarder witdh
-default_border pixel 3
-default_floating_border pixel 3
+default_border pixel 2
+default_floating_border pixel 2
 
