--- a/universal/kitty/kitty.conf
+++ b/universal/kitty/kitty.conf
@@ -6,7 +6,8 @@
 ## upstream: https://github.com/catppuccin/kitty/blob/main/themes/macchiato.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
 
-
+# Font style and size
+font_family JetBrainsMono Nerd Font
 
 # The basic colors
 foreground              #cad3f5
