--- a/x11/i3/config
+++ b/x11/i3/config
@@ -9,12 +9,42 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-#                        class   border  backgr. text indicator
-client.focused           #000000 #EED49F #5B6078 #EED49F #EED49F
-#client.focused_tab_title #EED49F #EED49F #FFFFFF #EED49F #EED49F
-client.focused_inactive  #000000 #000000 #000000 #EED49F #EED49F
-client.unfocused         #EED49F #5B6078 #EED49F #5B6078 #5B6078
-client.urgent            #900000 #900000 #900000 #900000 #900000
+set $rosewater #f4dbd6
+set $flamingo #f0c6c6
+set $pink #f5bde6
+set $mauve #c6a0f6
+set $red #ed8796
+set $maroon #ee99a0
+set $peach #f5a97f
+set $yellow #eed49f
+set $green #a6da95
+set $teal #8bd5ca
+set $sky #91d7e3
+set $sapphire #7dc4e4
+set $blue #8aadf4
+set $lavender #b7bdf8
+set $text #cad3f5
+set $subtext1 #b8c0e0
+set $subtext0 #a5adcb
+set $overlay2 #939ab7
+set $overlay1 #8087a2
+set $overlay0 #6e738d
+set $surface2 #5b6078
+set $surface1 #494d64
+set $surface0 #363a4f
+set $base #24273a
+set $mantle #1e2030
+set $crust #181926
+
+# target                 title     bg    text   indicator  border
+#                                               <problem>                     <problem> - the color that causes the right boarder to become a different color when active
+client.focused           $lavender $base $text  $lavender $lavender
+#                                               <problem>                     <problem> - the color that causes the right boarder to become a different color when active
+client.focused_inactive  $overlay0 $base $text  $overlay0 $overlay0
+client.unfocused         $overlay0 $base $text  $rosewater $overlay0
+client.urgent            $peach    $base $peach $overlay0  $peach
+client.placeholder       $overlay0 $base $text  $overlay0  $overlay0
+client.background        $base
 
 set $mod Mod4
 
@@ -214,6 +244,7 @@ exec --no-startup-id POLYBAR_MONITOR=HDMI-0 polybar
 # Window gaps
 gaps inner 10
 gaps outer 0
+gaps top 0
 
 # Optional: Set specific gaps for different modes
 # gaps inner <n>
