--- a/x11/polybar/config.ini
+++ b/x11/polybar/config.ini
@@ -16,14 +16,16 @@
 ;
 ;==========================================================
 
+; polybar-msg cmd restart
+
 [colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+background = #24273a
+background-alt = #5b6078
+foreground = #cad3f5
+primary = #b7bdf8
+secondary = #f5a97f
+alert = #ed8796
+disabled = #f4dbd6
 
 [bar/example]
 monitor = ${env:POLYBAR_MONITOR}
@@ -38,7 +40,7 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
+border-size = 1pt
 border-color = #00000000
 
 padding-left = 0
@@ -49,10 +51,12 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+; ttf-jetbrains-mono
+font-0 = JetBrains Mono:size=12;2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-center = date
+modules-right = xkeyboard pulseaudio filesystem memory cpu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -100,7 +104,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+label-mounted = %{F#B7BDF8}%mountpoint%%{F-} %percentage_used%%
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -148,23 +152,23 @@ type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+label-disconnected = %{F#B7BDF8}}%ifname%%{F#707880} disconnected
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+label-connected = %{F#B7BDF8}}%ifname%%{F-} %essid% %local_ip%
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = %{F#B7BDF8}%ifname%%{F-} %local_ip%
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %H:%M
+date = %Y-%m-%d %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
 
 label = %date%
