--- a/x11/polybar/config.ini
+++ b/x11/polybar/config.ini
@@ -52,7 +52,7 @@ separator = |
 separator-foreground = ${colors.disabled}
 
 ; ttf-jetbrains-mono
-font-0 = JetBrains Mono:size=12;2
+font-0 = JetBrainsMono Nerd Font Mono:size=12;2
 
 modules-left = xworkspaces xwindow
 modules-center = date
